# himmeli

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
Himmeli/: __init__.py  himmeli.py  utils.py
Himmeli/model/: bicone.py  bicone_lack.py  cone.py  icosahedron.py  star.py
demo/: demo.ipynb
himmeli/: __init__.py  himmeli.py  utils.py
himmeli/model/: bicone.py  bicone_lack.py  cone.py  icosahedron.py  star.py
tests/: test_himmeli.py
