[tool.poetry]
name = "himmeli"
version = "1.0.0"
description = ""
authors = ["Yoiduki <90896806+y-muen@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
astropy = "^5.0.4"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]
ipykernel = "^6.13.0"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
